- Removed calls to UIWindow.appearance().overrideUserInterfaceStyle due to issues with Automatic Dark Mode. our interface style is "light", even in dark mode. Apparently that's required? - The webview opaque settings were interfering with the byob theme background. Added conditions to limit when this applies. Also added an explicit background colour to the byob css.

--- a/App/Theming/posts-view-byob.css
+++ b/App/Theming/posts-view-byob.css
@@ -5,6 +5,7 @@
  Copyright 2014 Awful Contributors. CC BY-NC-SA 3.0 US https://github.com/Awful/Awful.app
 */
 body {
+  background-color: #9999ff;
   min-height: 100vh;
   font: -apple-system-body;
   margin: 0;
